--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">MobileDataTimerWidget</string>
+    <string name="app_name">Net Guardian</string>
+    <string name="app_name2">Net Guardian</string>
     <string name="action_settings">Settings</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
@@ -7,4 +8,6 @@
     <string name="passive_period">Mobile Data Passive Period</string>
     <string name="min">Min</string>
     <string name="hour">Hour</string>
+    <string name="quit">QUIT</string>
+    
 </resources>
