--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
         This process does not provide for this Android version.\nIt must be API 19 or lower.
     </string>
     <string name="alt_reklam">ca-app-pub-8446606602742080/7003047850</string>
+    <string name="error">Error</string>
 
 </resources>
